[MN-989] : little bugs in Java